--- a/public/frontend/assets/css/login.css
+++ b/public/frontend/assets/css/login.css
@@ -61,7 +61,7 @@ button {
   height: 36px;
   border-radius: 30px;
   color: #fff;
-  font-size: 15px;
+  font-size: 12px;
   cursor: pointer;
 }
 
@@ -82,7 +82,7 @@ button {
   top: 0;
   width: 900px;
   height: 100%;
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/sections-3.jpg");
+  background-image: url("https://images.unsplash.com/photo-1501630834273-4b5604d2ee31?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
   background-size: cover;
   transition: transform 1.2s ease-in-out;
 }
@@ -136,7 +136,7 @@ button {
   background: transparent;
   color: #fff;
   text-transform: uppercase;
-  font-size: 15px;
+  font-size: 12px;
   cursor: pointer;
 }
 .img__btn:after {
@@ -173,10 +173,15 @@ button {
 
 h2 {
   width: 100%;
-  font-size: 26px;
+  font-size: 30px;
   text-align: center;
 }
-
+p {
+  font-size: 10px;
+  line-height: 4;
+  text-align: center;
+  
+}
 label {
   display: block;
   width: 260px;
@@ -185,7 +190,7 @@ label {
 }
 label span {
   font-size: 7px;
-  color: #cfcfcf;
+  color: #254c6c;
   text-transform: uppercase;
 
 }
@@ -204,14 +209,15 @@ input {
   margin-top: 15px;
   text-align: right;
   font-size: 8px;
-  color: #687eff;
+  color: #121734;
 }
 
 .submit {
   margin-top: 40px;
   margin-bottom: 20px;
-  background: #d4af7a;
+  background: #254c6c;
   text-transform: uppercase;
+  
 }
 
 .fb-btn {
