--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -14,12 +14,12 @@ body {
 }
 
 a {
-  color: #94c045;
+  color: #3772a1;
   text-decoration: none;
 }
 
 a:hover {
-  color: #aacd6b;
+  color: #3772a1;
   text-decoration: none;
 }
 
@@ -57,7 +57,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .back-to-top:hover {
-  background: #a6ca63;
+  background: #3772a1;
   color: #fff;
 }
 
@@ -95,7 +95,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo h1 a, #header .logo h1 a:hover {
-  color: #3c4133;
+  color: #3772a1;
   text-decoration: none;
 }
 
@@ -112,7 +112,7 @@ h1, h2, h3, h4, h5, h6 {
 * Desktop Navigation 
 */
 .navbar {
-  padding: 0;
+  padding: 40px;
 }
 
 .navbar ul {
@@ -392,7 +392,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .btn-get-started:hover {
-  background: #94c045;
+  background: #3772a1;
 }
 
 @media (min-width: 1024px) {
@@ -587,7 +587,7 @@ section {
 .about .play-btn {
   width: 94px;
   height: 94px;
-  background: radial-gradient(#94c045 50%, rgba(148, 192, 69, 0.4) 52%);
+  background: radial-gradient(#3772a1 50%, rgba(148, 192, 69, 0.4) 52%);
   border-radius: 50%;
   display: block;
   position: absolute;
@@ -635,7 +635,7 @@ section {
 }
 
 .about .play-btn:hover::after {
-  border-left: 15px solid #94c045;
+  border-left: 15px solid #3772a1;
   transform: scale(20);
 }
 
@@ -757,7 +757,7 @@ section {
 }
 
 .services .icon-box:hover .title a {
-  color: #94c045;
+  color: #3772a1;
 }
 
 .services .description {
@@ -791,7 +791,7 @@ section {
 .work-process .content ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #94c045;
+  color: #3772a1;
 }
 
 .work-process .content p:last-child {
@@ -824,7 +824,7 @@ section {
 .skills .content ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #94c045;
+  color: #3772a1;
 }
 
 .skills .content p:last-child {
@@ -861,7 +861,7 @@ section {
   width: 1px;
   height: 10px;
   transition: .9s;
-  background-color: #94c045;
+  background-color: #3772a1;
 }
 
 /*--------------------------------------------------------------
@@ -890,11 +890,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #94c045;
+  border: 1px solid #3772a1;
 }
 
 .clients .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #94c045;
+  background-color: #3772a1;
 }
 
 /*--------------------------------------------------------------
@@ -1538,7 +1538,7 @@ section {
 }
 
 .blog .entry .entry-title a:hover {
-  color: #94c045;
+  color: #3772a1;
 }
 
 .blog .entry .entry-meta {
@@ -1583,7 +1583,7 @@ section {
 
 .blog .entry .entry-content .read-more a {
   display: inline-block;
-  background: #94c045;
+  background: #3772a1;
   color: #fff;
   padding: 6px 20px;
   transition: 0.3s;
@@ -1647,7 +1647,7 @@ section {
 }
 
 .blog .entry .entry-footer a:hover {
-  color: #94c045;
+  color: #3772a1;
 }
 
 .blog .entry .entry-footer .cats {
@@ -1756,7 +1756,7 @@ section {
 }
 
 .blog .blog-comments .comment h5 a:hover {
-  color: #94c045;
+  color: #3772a1;
 }
 
 .blog .blog-comments .comment h5 .reply {
@@ -1856,7 +1856,7 @@ section {
 }
 
 .blog .blog-pagination li.active, .blog .blog-pagination li:hover {
-  background: #94c045;
+  background: #3772a1;
 }
 
 .blog .blog-pagination li.active a, .blog .blog-pagination li:hover a {
@@ -1936,7 +1936,7 @@ section {
 }
 
 .blog .sidebar .categories ul a:hover {
-  color: #94c045;
+  color: #3772a1;
 }
 
 .blog .sidebar .categories ul a span {
@@ -2172,259 +2172,4 @@ section {
   font-size: 13px;
   color: #fff;
 }
-/* =============================================================================================== */
-*, *:before, *:after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
-  background: #ededed;
-}
-
-input, button {
-  border: none;
-  outline: none;
-  background: none;
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
-}
-
-.tip {
-  font-size: 20px;
-  margin: 40px auto 50px;
-  text-align: center;
-}
-
-.cont {
-  overflow: hidden;
-  position: relative;
-  width: 900px;
-  height: 550px;
-  margin: 0 auto 100px;
-  background: #fff;
-}
-
-.form {
-  position: relative;
-  width: 640px;
-  height: 100%;
-  transition: transform 1.2s ease-in-out;
-  padding: 50px 30px 0;
-}
-
-.sub-cont {
-  overflow: hidden;
-  position: absolute;
-  left: 640px;
-  top: 0;
-  width: 900px;
-  height: 100%;
-  padding-left: 260px;
-  background: #fff;
-  transition: transform 1.2s ease-in-out;
-}
-.cont.s--signup .sub-cont {
-  transform: translate3d(-640px, 0, 0);
-}
-
-button {
-  display: block;
-  margin: 0 auto;
-  width: 260px;
-  height: 36px;
-  border-radius: 30px;
-  color: #fff;
-  font-size: 15px;
-  cursor: pointer;
-}
-
-.img {
-  overflow: hidden;
-  z-index: 2;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 260px;
-  height: 100%;
-  padding-top: 360px;
-}
-.img:before {
-  content: "";
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 900px;
-  height: 100%;
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/sections-3.jpg");
-  background-size: cover;
-  transition: transform 1.2s ease-in-out;
-}
-.img:after {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-}
-.cont.s--signup .img:before {
-  transform: translate3d(640px, 0, 0);
-}
-.img__text {
-  z-index: 2;
-  position: absolute;
-  left: 0;
-  top: 50px;
-  width: 100%;
-  padding: 0 20px;
-  text-align: center;
-  color: #fff;
-  transition: transform 1.2s ease-in-out;
-}
-.img__text h2 {
-  margin-bottom: 10px;
-  font-weight: normal;
-}
-.img__text p {
-  font-size: 14px;
-  line-height: 1.5;
-}
-.cont.s--signup .img__text.m--up {
-  transform: translateX(520px);
-}
-.img__text.m--in {
-  transform: translateX(-520px);
-}
-.cont.s--signup .img__text.m--in {
-  transform: translateX(0);
-}
-.img__btn {
-  overflow: hidden;
-  z-index: 2;
-  position: relative;
-  width: 100px;
-  height: 36px;
-  margin: 0 auto;
-  background: transparent;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 15px;
-  cursor: pointer;
-}
-.img__btn:after {
-  content: "";
-  z-index: 2;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  border: 2px solid #fff;
-  border-radius: 30px;
-}
-.img__btn span {
-  position: absolute;
-  left: 0;
-  top: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  transition: transform 1.2s;
-}
-.img__btn span.m--in {
-  transform: translateY(-72px);
-}
-.cont.s--signup .img__btn span.m--in {
-  transform: translateY(0);
-}
-.cont.s--signup .img__btn span.m--up {
-  transform: translateY(72px);
-}
-
-h2 {
-  width: 100%;
-  font-size: 26px;
-  text-align: center;
-}
-
-label {
-  display: block;
-  width: 260px;
-  margin: 25px auto 0;
-  text-align: center;
-}
-label span {
-  font-size: 7px;
-  color: #cfcfcf;
-  text-transform: uppercase;
-
-}
-
-input {
-  display: block;
-  width: 100%;
-  margin-top: 5px;
-  padding-bottom: 5px;
-  font-size: 16px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
-  text-align: center;
-}
-
-.forgot-pass {
-  margin-top: 15px;
-  text-align: center;
-  font-size: 12px;
-  color: #687eff;
-}
-
-.submit {
-  margin-top: 40px;
-  margin-bottom: 20px;
-  background: #d4af7a;
-  text-transform: uppercase;
-}
-
-.fb-btn {
-  border: 2px solid #d3dae9;
-  color: #8fa1c7;
-}
-.fb-btn span {
-  font-weight: bold;
-  color: #455a81;
-}
-
-.sign-in {
-  transition-timing-function: ease-out;
-}
-.cont.s--signup .sign-in {
-  transition-timing-function: ease-in-out;
-  transition-duration: 1.2s;
-  transform: translate3d(640px, 0, 0);
-}
-
-.sign-up {
-  transform: translate3d(-900px, 0, 0);
-}
-.cont.s--signup .sign-up {
-  transform: translate3d(0, 0, 0);
-}
-
-.icon-link {
-  position: absolute;
-  left: 5px;
-  bottom: 5px;
-  width: 32px;
-}
-.icon-link img {
-  width: 100%;
-  vertical-align: top;
-}
-.icon-link--twitter {
-  left: auto;
-  right: 5px;
-}
+/* ================================================================================= */
