--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -463,6 +463,7 @@ section {
 }
 
 .breadcrumbs .breadcrumb-hero {
+  width: 100%;
   text-align: center;
   background: #3772a1;
   padding: 20px 0;
@@ -683,19 +684,16 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: #3772a1;
+  background: #A7CDDC;
   padding: 50px 0;
 }
 
 .cta h3 {
-  color: #fff;
+  color: #2B4F66;
   font-size: 28px;
   font-weight: 700;
 }
 
-.cta p {
-  color: #fff;
-}
 
 .cta .cta-btn {
   font-family: "Raleway", sans-serif;
@@ -707,12 +705,12 @@ section {
   border-radius: 25px;
   transition: 0.5s;
   margin-top: 10px;
-  border: 2px solid #fff;
-  color: #fff;
+  border: 2px solid #2B4F66;
+  color: #2B4F66;
 }
 
 .cta .cta-btn:hover {
-  background: #3d9da7;
+  background: #ffffff;
 }
 
 /*--------------------------------------------------------------
@@ -728,15 +726,17 @@ section {
   box-shadow: 0 2px 29px 0 rgba(68, 88, 144, 0.12);
   transition: all 0.3s ease-in-out;
 }
+.services .icon-box div {
+  display: inline-block;
+}
 
 .services .icon-box:hover {
   transform: translateY(-5px);
 }
 
 .services .icon {
-  position: absolute;
-  left: -20px;
-  top: calc(50% - 30px);
+  width: 100%;
+  margin-bottom: 10px;
 }
 
 .services .icon i {
@@ -746,7 +746,6 @@ section {
 }
 
 .services .title {
-  margin-left: 40px;
   font-weight: 700;
   margin-bottom: 15px;
   font-size: 18px;
@@ -762,7 +761,6 @@ section {
 
 .services .description {
   font-size: 14px;
-  margin-left: 40px;
   line-height: 24px;
   margin-bottom: 0;
 }
@@ -2173,3 +2171,302 @@ section {
   color: #fff;
 }
 /* ================================================================================= */
+/* */
+
+html * {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+
+
+h2 {
+	font-size: 1.5rem;
+	font-weight: bold;
+	line-height: 2.2;
+}
+
+button {
+	border: none;
+	border-radius: 5px;
+	padding: 0.5rem 1rem;
+	background-color: dodgerblue;
+	color: white;
+	margin: 1rem 0;
+	font-size: 1rem;
+}
+
+.wrapper {
+	position: relative;
+	width: 1118px;
+	height: 400px;
+	overflow: hidden;
+	display: flex;
+	align-items: flex-end;
+	justify-content: center;
+	padding: 1rem;
+}
+
+input {
+	appearance: none;
+	z-index: 100;
+	margin-right: 1rem;
+	width: 1rem;
+	height: 1rem;
+	background: #777777;
+	border-radius: 50%;
+	cursor: pointer;
+}
+
+input:last-of-type {
+	margin: 0;
+}
+
+input:focus {
+	outline: none;
+}
+
+input:checked {
+	background: #2B4F66;
+}
+
+input + * {
+	position: absolute;
+	display: block;
+	top: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	transform: translateX(100%);
+	transition: transform ease-in-out 400ms;
+	border-radius: 5px;
+	overflow: hidden;
+	background: #ddd;
+}
+
+input + *[aria-label]:before {
+	content: attr(aria-label);
+	display: block;
+	position: absolute;
+	top: 1.5rem;
+	left: 1.5rem;
+	font-size: 1.5rem;
+	color: white;
+	z-index: 1;
+	padding: 0.5rem;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+
+section {
+	padding: 1rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+input:checked + * {
+	transform: translateX(0);
+	z-index: 1;
+}
+
+/* 
+	just to be safe we hide every element that comes after
+	each slide and that's not an input of type radio
+*/
+input + * + *:not(input[type="radio"]) {
+	display: none;
+}
+
+/* ARROWS */
+
+input:before {
+	display: none !important;
+	content: "";
+	position: absolute;
+	top: 50%;
+	left: 1rem;
+	width: 2rem;
+	height: 2rem;
+	background: orange;
+	border-radius: 50%;
+}
+
+input:after {
+	display: none !important;
+	content: "";
+	position: absolute;
+	top: calc(50% + 1rem);
+	left: 2rem;
+	width: 0.5rem;
+	height: 0.5rem;
+	border-bottom: 1px solid #262626;
+	border-left: 1px solid #262626;
+	transform: translate(-25%, -50%) rotate(45deg);
+}
+
+input:checked:before,
+input:checked:after {
+	display: none;
+}
+
+input:checked + * + input:before {
+	left: calc(100% - 3rem);
+}
+
+input:checked + * + input:after {
+	left: calc(100% - 2rem);
+	transform: translate(-75%, -50%) rotate(-135deg);
+}
+
+input:checked + * + input + * ~ input:before,
+input:checked + * + input + * ~ input:after {
+	display: none;
+}
+
+input:last-of-type:before {
+	background: green;
+}
+
+.testimonials {
+  padding: 80px 0;
+  background: url("../img/testimonials-bg.jpg") no-repeat;
+  background-position: center center;
+  background-size: cover;
+  position: relative;
+}
+
+.testimonials::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.7);
+}
+
+.testimonials .section-header {
+  margin-bottom: 40px;
+}
+
+.testimonials .testimonial-item {
+  text-align: center;
+  color: #fff;
+}
+
+.testimonials .testimonial-item .testimonial-img {
+  width: 100px;
+  border-radius: 50%;
+  border: 6px solid rgba(255, 255, 255, 0.15);
+  margin: 0 auto;
+}
+
+.testimonials .testimonial-item .testimonial-img-banner {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.testimonials .testimonial-item h3 {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 10px 0 5px 0;
+  color: #000;
+}
+
+.testimonials .testimonial-item h4 {
+  font-size: 14px;
+  color: #000;
+  margin: 0 0 15px 0;
+}
+
+.testimonials .testimonial-item .quote-icon-left, .testimonials .testimonial-item .quote-icon-right {
+  color: rgba(255, 255, 255, 0.4);
+  font-size: 26px;
+}
+
+.testimonials .testimonial-item .quote-icon-left {
+  display: inline-block;
+  left: -5px;
+  position: relative;
+}
+
+.testimonials .testimonial-item .quote-icon-right {
+  display: inline-block;
+  right: -5px;
+  position: relative;
+  top: 10px;
+}
+
+.testimonials .testimonial-item p {
+  font-style: italic;
+  margin: 0 auto 15px auto;
+  color: #000;
+}
+
+.testimonials .swiper-pagination {
+  margin-top: 20px;
+  position: relative;
+}
+
+.testimonials .swiper-pagination .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: rgba(255, 255, 255, 0.5);
+  opacity: 1;
+}
+
+.testimonials .swiper-pagination .swiper-pagination-bullet-active {
+  background-color: #106eea;
+}
+
+@media (min-width: 992px) {
+  .testimonials .testimonial-item p {
+    width: 80%;
+  }
+}
+
+.berita-img-sm-banner {
+  width: 100%;
+  height: 350px;
+  border-radius: 20px;
+  object-fit: cover;
+}
+
+.card {
+  margin-bottom: 40px;
+    border: 0px;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    letter-spacing: 0.5px;
+    border-radius: 40px;
+    -webkit-box-shadow: 0px 0px 25px 0px rgba(126,55,216,0.05);
+    box-shadow: 0px 0px 25px 0px rgba(126,55,216,0.05)
+}
+
+.card .card-header {
+  background-color: #fff;
+    padding: 50px;
+    border-bottom: 1px solid #f2f4ff;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+    position: relative;
+    overflow: hidden;
+    border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
+}
+
+.card .card-body ul {
+  list-style: none;
+  padding: 0;
+}
+
+.card .card-body ul i {
+    font-size: 24px;
+    color: #94c045;
+}
+
+.card .card-body .div-inline-block {
+  display: inline-block;
+  vertical-align: top;
+}
