--- a/public/frontend/assets/css/editp.css
+++ b/public/frontend/assets/css/editp.css
@@ -478,8 +478,8 @@ body {
 .profile-nav .user-heading {
   background: #254c6c;
   color: #fff;
-  border-radius: 4px 4px 0 0;
-  -webkit-border-radius: 4px 4px 0 0;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
   padding: 30px;
   text-align: center;
 }
@@ -825,7 +825,7 @@ textarea {
 input,
 textarea {
   background: none;
-  color: #c6c6c6;
+  color:  rgb(23, 37, 60);
   font-size: 18px;
   padding: 10px 10px 10px 5px;
   display: block;
@@ -947,7 +947,7 @@ body {
   color: #254c6c;
   border: 0.15em solid #254c6c;
   border-radius: calc(0.75em + 0.5em + 0.15em);
-  transition: 4s;
+  transition: 1s;
 }
 .button:before, .button:after {
   content: "";
