--- a/public/frontend/assets/css/profile.css
+++ b/public/frontend/assets/css/profile.css
@@ -37,8 +37,8 @@ body {
 .profile-nav .user-heading {
   background: #254c6c;
   color: #fff;
-  border-radius: 4px 4px 0 0;
-  -webkit-border-radius: 4px 4px 0 0;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
   padding: 30px;
   text-align: center;
 }
@@ -484,7 +484,7 @@ textarea {
 input,
 textarea {
   background: none;
-  color: #c6c6c6;
+  color:  rgba(0, 94, 255, 0.25);
   font-size: 18px;
   padding: 10px 10px 10px 5px;
   display: block;
