--- a/public/frontend/assets/css/login.css
+++ b/public/frontend/assets/css/login.css
@@ -27,7 +27,7 @@ input, button {
   position: relative;
   width: 900px;
   height: 550px;
-  margin: 0 auto 100px;
+  margin: 30px auto 100px;
   background: #fff;
 }
 
@@ -36,7 +36,7 @@ input, button {
   width: 640px;
   height: 100%;
   transition: transform 1.2s ease-in-out;
-  padding: 50px 30px 0;
+  padding: 90px 30px 0;
 }
 
 .sub-cont {
