--- a/public/backend/css/sb-admin-2.css
+++ b/public/backend/css/sb-admin-2.css
@@ -2359,8 +2359,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #4e73df;
-  border-color: #4e73df;
+  background-color: #37BDF0;
+  border-color: #37BDF0;
 }
 
 .btn-primary:hover {
